# assassyn

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  apptainer.yaml  assassyn.def  build.sh  init.sh  rustfmt.toml  setup.sh
.claude/: config.json
.codex/: config.toml
.cursor/: cli.json  worktrees.json
docs/: README.md  TODO.md  apptainer.md  debug.md  design-doc.md  developers.md  docker.md  language.md
dones/: DONE-IR-Dump-Logging-Tests.md  DONE-array-metadata.md  DONE-builder-parent-context.md  DONE-consolidate-enforce-type.md  DONE-credit-counter-ip.md  DONE-doc-fix-external-usage.md  DONE-doc-fix-modules.md  DONE-doc-fix-naming-manager.md  DONE-doc-fix-rewrite-assign.md  DONE-doc-fix-topo.md  DONE-doc-fix-type-oriented-namer.md  DONE-doc-fix-unique-name.md  DONE-doc-fix-utils.md  DONE-dram-simulator-backend.md  DONE-eliminate-callback-collector-and-fix-dram.md  DONE-fix-array-read-cache-predicates.md  DONE-fix-builder-singleton-cleanup.md  DONE-fix-dram-code-generation-issues.md  DONE-fix-dram-intrinsic-valued-property.md  DONE-fix-fmt.md  DONE-fix-workflow-cache.md  DONE-ir-builder-simplification.md  DONE-log-accessors.md  DONE-log-meta-cond-refactor.md  DONE-log-predicate-metadata.md  DONE-make-to-flow.md  DONE-module-stack-refactor.md  DONE-patch-all-target.md  DONE-polish-makefile.md  DONE-predicate-brace-dump.md  DONE-predicate-intrinsics-and-simulator-first-tests.md  DONE-predicate-modulecontext-isolation.md  DONE-ramulator2-build.md  DONE-refactor-naming.md  DONE-refactor-predicate-frame-interfaces.md  DONE-remove-block.md  DONE-replace-condition-with-intrinsics.md  DONE-script-to-make.md  DONE-unify-lib-path.md  DONE-unify-workflow-cache.md  (+10 more)
eir/: Cargo.toml  README.md
examples/: asic_axbplusc.py
py-tests/: README.md  test_arbiter.py  test_array_multi_read.py  test_array_multi_write_in_same_module.py  test_array_partition0.py  test_array_partition1.py  test_async_call.py  test_bind.py  test_common_read.py  test_concat.py  test_cond_cse.py  test_cse.py  test_driver.py  test_dt_conv.py  test_eager_bind.py  test_explicit_pop.py  test_fib.py  test_fifo_valid.py  test_helloworld.py  test_imbalance.py  test_inline0.py  test_inline1.py  test_memory.py  test_multi_call.py  test_reg_init.py  test_select.py  test_testbench.py  test_wait_until.py
python/: .pylintrc  requirements.txt
scripts/: 5222-gnu-20.patch  build-verilator.sh  circt-disable-esi.patch  codex.inc  exclude  patch-apply.md  patch-apply.sh  pre-commit  ramulator2-template.patch  remove-trailing-spaces.py  test.sh  todo.sh
src/: codegen.rs  frontend.rs  lib.rs  parser.rs  test_utils.rs  utils.rs
testbench/: Makefile  main.cpp
testbench/simulator/: CMakeLists.txt  MyWrapper.cpp  MyWrapper.h  main.cpp  test.cpp  test.md
testbench/simulator/include/: base.h  config.h  frontend.h  memory_system.h  request.h
tests/: adder.rs  async_call.rs  back_pressure.rs  bind.rs  callback.rs  common_read.rs  concat.rs  data_type_conversion.rs  eager_bind.rs  explicit_pop.rs  fib.rs  fifo_valid.rs  helloworld.rs  inline.rs  memory.rs  multi_call.rs  reg_handle.rs  select.rs  spin_lock.rs  spin_trigger.rs  systolic.rs  testbench.rs  tests.rs  trigger.rs
todos/: DOCUMENTATION-STATUS.md  TEST-TODO.md  TODO-doc-fix-base.md  TODO-doc-fix-block.md  TODO-doc-fix-experimental-frontend.md  TODO-doc-fix-expr-consolidated.md  TODO-doc-fix-external-usage.md  TODO-doc-fix-frontend-backend.md  TODO-doc-fix-intrinsics.md  TODO-doc-fix-memory.md  TODO-doc-fix-module-docs.md  TODO-doc-fix-modules.md  TODO-doc-fix-naming-manager.md  TODO-doc-fix-port-mapper.md  TODO-doc-fix-ramulator2.md  TODO-doc-fix-rewrite-assign-modules-type-namer.md  TODO-doc-fix-rewrite-assign.md  TODO-doc-fix-simulator-elaboration.md  TODO-doc-fix-simulator.md  TODO-doc-fix-topo.md  TODO-doc-fix-type-oriented-namer.md  TODO-doc-fix-unique-name.md  TODO-doc-fix-utils.md  TODO-doc-fix-verilog-codegen.md
tools/c-ramulator2-wrapper/: .cwrapper-lib-path.in  .ramulator2-lib-path.in  CMakeLists.txt  CRamualator2Wrapper.cpp  CRamualator2Wrapper.h  main.cpp  test.cpp  test.md
tools/c-ramulator2-wrapper/configs/: example_config.yaml
tutorials/: 00_driver_en.qmd  00_driver_zh.qmd  01_async_call_en.qmd  01_async_call_zh.qmd  02_downstream_zh.qmd  03_sram_zh.qmd  03_trace_based_dsl_zh.qmd  04_trace_based_dsl_en.qmd  05_port_writing_en.qmd  05_port_writing_zh.qmd  06_bind_zh.qmd  async_call_zh.qmd  downstream.qmd  driver.qmd  function_t.py
utils/: build-verilator.sh  pre-commit  test.sh
(+743 files in other folders)
